2007-05-02  Werner Koch  <wk@g10code.com>

	* camellia.h: Redefine external symbols.

2007-05-02  David Shaw  <dshaw@jabberwocky.com>

	* Makefile.am, cipher.c: Add Camellia.

	* camellia-glue.c: New.  The necessary glue to interface libgcrypt
	to the stock NTT Camellia distribution.

	* camellia.h, camellia.c: The stock NTT Camellia distribution
	(GPL).

2007-04-30  David Shaw  <dshaw@jabberwocky.com>

	* cipher.c: Use #if instead of #ifdef as configure defines the
	USE_cipher defines as 0 for disabled.

2007-04-30  Werner Koch  <wk@g10code.com>

	* rndegd.c (_gcry_rndegd_set_socket_name): New.

2007-04-30  Marcus Brinkmann  <marcus@g10code.de>

	* ecc.c (ec2os): Fix relocation of short numbers.

	* ecc.c (generate_key): Do not allocate D, which will be allocated
	by GEN_K.  Remove G.  Fix test if g_x, g_y resp. q_x, q_y are
	requested.
	(_gcry_ecc_generate): Release unneeded members of SK.
	* pubkey.c (sexp_to_key): Release NAME.

2007-04-28  Marcus Brinkmann  <marcus@g10code.de>

	* ac.c (gcry_ac_mpi): Remove member NAME_PROVIDED.
	(ac_data_mpi_copy, _gcry_ac_data_set, _gcry_ac_data_get_name)
	(_gcry_ac_data_get_index, ac_data_construct): Adjust handling of
	NAME accordingly.

2007-04-20  Werner Koch  <wk@g10code.com>

	* ecc.c (domain_parms): Add standard brainpool curves.

2007-04-18  Werner Koch  <wk@g10code.com>

	* ecc.c (generate_curve): Implement alias mechanism.

	* pubkey.c (sexp_elements_extract_ecc): New.
	(sexp_to_key): Add special case for ecc.
	(sexp_to_key, sexp_to_sig, sexp_to_enc, gcry_pk_genkey): Replace
	name_terminated stuff by a call to _gcry_sexp_nth_string.
	(gcry_pk_get_keygrip): Ditto.

2007-04-16  Werner Koch  <wk@g10code.com>

	* ecc.c (_gcry_ecc_generate): Renamed DUMMY to CURVE and use it.

2007-04-13  Marcus Brinkmann  <marcus@g10code.de>

	* ac.c (ac_data_construct): Cast const away to suppress compiler
	warning.

	* ecc.c (ecc_generate): Avoid compiler warning for unused argument
	DUMMY.